Add modules needed for forgeessentials to the defaults